torchserve-app/templates/service.yaml
# Service for coco-model
apiVersion: v1
kind: Service
metadata:
  name: coco-model
spec:
  type: ClusterIP
  selector:
    app: coco-model
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: management
      port: 8081
      targetPort: 8081
    - name: metrics
      port: 8082
      targetPort: 8082

---
# Service for wildlife-model
apiVersion: v1
kind: Service
metadata:
  name: wildlife-model
spec:
  type: ClusterIP
  selector:
    app: wildlife-model
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: management
      port: 8081
      targetPort: 8081
    - name: metrics
      port: 8082
      targetPort: 8082
